# docs/swagger.json
@@ -31,7 +31,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.AdminCategory"
+                                "$ref": "#/definitions/model.Category"
                             }
                         }
                     },
@@ -68,16 +68,13 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.AdminNewCategory"
+                            "$ref": "#/definitions/model.NewCategoryParam"
                         }
                     }
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/model.AdminNewCategoryCreated"
-                        }
+                        "description": "NoContent: when the category has been removed successfully"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -107,9 +104,6 @@
             },
             "delete": {
                 "description": "Removes the given category.",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -159,7 +153,7 @@
         },
         "/admin/unsaved-posts": {
             "get": {
-                "description": "Lists all unsaved posts.\nThe unsaved posts are sorted by the 'created-at' field in ascending order.",
+                "description": "Lists all unsaved posts without its images.\nThe unsaved posts are sorted by the 'created-at' field in ascending order.",
                 "produces": [
                     "application/json"
                 ],
@@ -173,7 +167,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.AdminUnsavedPost"
+                                "$ref": "#/definitions/model.UnsavedPostWithoutImage"
                             }
                         }
                     },
@@ -191,10 +185,63 @@
                     }
                 }
             }
+        },
+        "/admin/unsaved-posts/{uuid}": {
+            "get": {
+                "description": "Gets a specified unsaved post by its UUID.\nThe unsaved post will contain images if any.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin post management"
+                ],
+                "summary": "Get unsaved post",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "An UUID of the unsaved post to be fetched",
+                        "name": "uuid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.UnsavedPost"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.HTTPError400"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/model.HTTPError401"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/model.HTTPError404"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.HTTPError500"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "model.AdminCategory": {
+        "model.Category": {
             "type": "object",
             "required": [
                 "created-at",
@@ -204,7 +251,7 @@
             "properties": {
                 "created-at": {
                     "type": "string",
-                    "example": "2021-08-18 00:00:00Z"
+                    "example": "2021-08-18T00:00:00Z00:00"
                 },
                 "description": {
                     "type": "string",
@@ -212,113 +259,11 @@
                 },
                 "modified-at": {
                     "type": "string",
-                    "example": "2021-08-18 00:00:00Z"
+                    "example": "2021-08-18T00:00:00Z00:00"
                 },
                 "name": {
                     "type": "string",
                     "example": "web"
-                }
-            }
-        },
-        "model.AdminNewCategory": {
-            "type": "object",
-            "required": [
-                "name"
-            ],
-            "properties": {
-                "description": {
-                    "type": "string",
-                    "example": "web-related things"
-                },
-                "name": {
-                    "type": "string",
-                    "example": "web"
-                }
-            }
-        },
-        "model.AdminNewCategoryCreated": {
-            "type": "object",
-            "required": [
-                "name"
-            ],
-            "properties": {
-                "name": {
-                    "type": "string",
-                    "example": "web"
-                }
-            }
-        },
-        "model.AdminUnsavedPost": {
-            "type": "object",
-            "required": [
-                "created-at",
-                "modified-at",
-                "uuid"
-            ],
-            "properties": {
-                "access-level": {
-                    "type": "string",
-                    "example": "public"
-                },
-                "category": {
-                    "type": "string",
-                    "example": "web"
-                },
-                "created-at": {
-                    "type": "string",
-                    "example": "2021-08-18 00:00:00Z"
-                },
-                "modified-at": {
-                    "type": "string",
-                    "example": "2021-08-18 00:00:00Z"
-                },
-                "slug": {
-                    "type": "string",
-                    "example": "my-first-post"
-                },
-                "thumbnail": {
-                    "$ref": "#/definitions/model.AdminUnsavedPostThumbnail"
-                },
-                "title": {
-                    "type": "string",
-                    "example": "My first post"
-                },
-                "uuid": {
-                    "type": "string",
-                    "example": "fd00000aa8660b5b010006acdc0100000101000100010000fd00000aa8660b5b"
-                }
-            }
-        },
-        "model.AdminUnsavedPostThumbnail": {
-            "type": "object",
-            "required": [
-                "created-at",
-                "validity"
-            ],
-            "properties": {
-                "created-at": {
-                    "type": "string",
-                    "example": "2021-08-18 00:00:00Z"
-                },
-                "hash": {
-                    "type": "string",
-                    "example": "LEHV6nWB2yk8pyo0adR*.7kCMdnj"
-                },
-                "height": {
-                    "type": "integer",
-                    "example": 128
-                },
-                "url": {
-                    "type": "string",
-                    "example": "https://image.example.com/example-image"
-                },
-                "validity": {
-                    "type": "string",
-                    "example": "pending"
-                },
-                "width": {
-                    "type": "integer",
-                    "example": 256
                 }
             }
         },
@@ -379,6 +324,185 @@
                 "message": {
                     "type": "string",
                     "example": "500 - Internal Server Error"
+                }
+            }
+        },
+        "model.NewCategoryParam": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string",
+                    "example": "web-related things"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "web"
+                }
+            }
+        },
+        "model.UnsavedPost": {
+            "type": "object",
+            "required": [
+                "created-at",
+                "modified-at",
+                "uuid"
+            ],
+            "properties": {
+                "access-level": {
+                    "type": "string",
+                    "example": "public"
+                },
+                "category": {
+                    "type": "string",
+                    "example": "web"
+                },
+                "created-at": {
+                    "type": "string",
+                    "example": "2021-08-18 00:00:00Z"
+                },
+                "images": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.UnsavedPostImage"
+                    }
+                },
+                "modified-at": {
+                    "type": "string",
+                    "example": "2021-08-18 00:00:00Z"
+                },
+                "slug": {
+                    "type": "string",
+                    "example": "my-first-post"
+                },
+                "thumbnail": {
+                    "$ref": "#/definitions/model.UnsavedPostThumbnail"
+                },
+                "title": {
+                    "type": "string",
+                    "example": "My first post"
+                },
+                "uuid": {
+                    "type": "string",
+                    "example": "fd00000aa8660b5b010006acdc0100000101000100010000fd00000aa8660b5b"
+                }
+            }
+        },
+        "model.UnsavedPostImage": {
+            "type": "object",
+            "required": [
+                "created-at",
+                "uuid",
+                "validity"
+            ],
+            "properties": {
+                "created-at": {
+                    "type": "string",
+                    "example": "2021-08-18 00:00:00Z"
+                },
+                "hash": {
+                    "type": "string",
+                    "example": "LEHV6nWB2yk8pyo0adR*.7kCMdnj"
+                },
+                "height": {
+                    "type": "integer",
+                    "example": 128
+                },
+                "title": {
+                    "type": "string",
+                    "example": "My image"
+                },
+                "url": {
+                    "type": "string",
+                    "example": "https://image.example.com/example-image"
+                },
+                "uuid": {
+                    "type": "string",
+                    "example": "fd00000aa8660b5b010006acdc0100000101000100010000fd00000aa8660b5b"
+                },
+                "validity": {
+                    "type": "string",
+                    "example": "pending"
+                },
+                "width": {
+                    "type": "integer",
+                    "example": 256
+                }
+            }
+        },
+        "model.UnsavedPostThumbnail": {
+            "type": "object",
+            "required": [
+                "created-at",
+                "validity"
+            ],
+            "properties": {
+                "created-at": {
+                    "type": "string",
+                    "example": "2021-08-18 00:00:00Z"
+                },
+                "hash": {
+                    "type": "string",
+                    "example": "LEHV6nWB2yk8pyo0adR*.7kCMdnj"
+                },
+                "height": {
+                    "type": "integer",
+                    "example": 128
+                },
+                "url": {
+                    "type": "string",
+                    "example": "https://image.example.com/example-image"
+                },
+                "validity": {
+                    "type": "string",
+                    "example": "pending"
+                },
+                "width": {
+                    "type": "integer",
+                    "example": 256
+                }
+            }
+        },
+        "model.UnsavedPostWithoutImage": {
+            "type": "object",
+            "required": [
+                "created-at",
+                "modified-at",
+                "uuid"
+            ],
+            "properties": {
+                "access-level": {
+                    "type": "string",
+                    "example": "public"
+                },
+                "category": {
+                    "type": "string",
+                    "example": "web"
+                },
+                "created-at": {
+                    "type": "string",
+                    "example": "2021-08-18 00:00:00Z"
+                },
+                "modified-at": {
+                    "type": "string",
+                    "example": "2021-08-18 00:00:00Z"
+                },
+                "slug": {
+                    "type": "string",
+                    "example": "my-first-post"
+                },
+                "thumbnail": {
+                    "$ref": "#/definitions/model.UnsavedPostThumbnail"
+                },
+                "title": {
+                    "type": "string",
+                    "example": "My first post"
+                },
+                "uuid": {
+                    "type": "string",
+                    "example": "fd00000aa8660b5b010006acdc0100000101000100010000fd00000aa8660b5b"
                 }
             }
         }
